--- a/Cmdlets/OutObfuscatedAssembly/Innofactor.Crm.CI.OutObfuscatedAssembly.csproj
+++ b/Cmdlets/OutObfuscatedAssembly/Innofactor.Crm.CI.OutObfuscatedAssembly.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Innofactor.Crm.CI.Cmdlets</RootNamespace>
     <AssemblyName>Innofactor.Crm.CI</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
