--- a/XTB/packages.config
+++ b/XTB/packages.config
@@ -2,18 +2,25 @@
 <packages>
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net462" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
-  <package id="ILMerge" version="2.14.1208" targetFramework="net462" />
+  <package id="ILMerge" version="3.0.29" targetFramework="net472" />
   <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1804.11" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.9" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.9" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.9" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.27" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.0.2.26" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net462" allowedVersions="[2.29.0]" />
-  <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net462" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2018.7.19" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.21" targetFramework="net472" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.21" targetFramework="net472" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.21" targetFramework="net472" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.21" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.21" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.4" targetFramework="net462" />
+  <package id="Microsoft.Web.Xdt" version="3.0.0" targetFramework="net472" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2019.11.27" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
-  <package id="XrmToolBoxPackage" version="1.2018.7.28" targetFramework="net462" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="XrmToolBoxPackage" version="1.2019.11.35" targetFramework="net462" />
 </packages>
